--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 buildscript {
     ext {
-        compose_version = '1.1.0-beta01'
+        compose_version = '1.2.1'
+    }
+    dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.40.5"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
