Update moshi implementation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,5 +91,7 @@ dependencies {
     implementation "androidx.hilt:hilt-navigation-compose:$hilt_androidx_version"
 
     // Moshi
-    implementation "com.squareup.moshi:moshi:1.13.0"
+    def moshi_version = "1.13.0"
+    implementation "com.squareup.moshi:moshi:$moshi_version"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
 }
