--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,16 +3,16 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
-    id 'com.google.devtools.ksp' version '1.6.10-1.0.2'
+    id 'com.google.devtools.ksp' version '1.7.10-1.0.6'
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.tam.tesbooks"
         minSdk 26
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -46,6 +46,15 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+
+    // IDE indexing for compose nav destinations dependency
+    applicationVariants.all { variant ->
+        kotlin.sourceSets {
+            getByName(variant.name) {
+                kotlin.srcDir("build/generated/ksp/${variant.name}/kotlin")
+            }
+        }
+    }
 }
 
 dependencies {
@@ -70,8 +79,9 @@ dependencies {
     implementation "com.google.accompanist:accompanist-swiperefresh:0.24.2-alpha"
 
     // Compose Nav Destinations
-    implementation 'io.github.raamcosta.compose-destinations:core:1.1.2-beta'
-    ksp 'io.github.raamcosta.compose-destinations:ksp:1.1.2-beta'
+    def compose_nav_version = "1.7.19-beta"
+    implementation 'io.github.raamcosta.compose-destinations:core:1.7.19-beta'
+    ksp 'io.github.raamcosta.compose-destinations:ksp:1.7.19-beta'
 
     // Room
     def room_version = "2.4.3"
@@ -82,11 +92,9 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
 
     // Dagger - Hilt
-    def hilt_version = "2.40.5"
-    def hilt_androidx_version = "1.0.0"
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    def hilt_androidx_version = "1.0.0"
     kapt "androidx.hilt:hilt-compiler:$hilt_androidx_version"
     implementation "androidx.hilt:hilt-navigation-compose:$hilt_androidx_version"
 
