--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,10 +78,13 @@ dependencies {
     implementation "androidx.activity:activity-compose:1.6.0-rc01"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.24.2-alpha"
 
-    // Compose Nav Destinations
-    def compose_nav_version = "1.7.19-beta"
-    implementation 'io.github.raamcosta.compose-destinations:core:1.7.19-beta'
-    ksp 'io.github.raamcosta.compose-destinations:ksp:1.7.19-beta'
+    // Compose navigation
+    implementation "androidx.navigation:navigation-compose:2.6.0-alpha01"
+
+    // Raamcosta Compose Nav Destinations
+    def raamcosta_nav_version = "1.7.19-beta"
+    implementation "io.github.raamcosta.compose-destinations:core:$raamcosta_nav_version"
+    ksp "io.github.raamcosta.compose-destinations:ksp:$raamcosta_nav_version"
 
     // Room
     def room_version = "2.4.3"
