--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,4 +105,7 @@ dependencies {
     def moshi_version = "1.13.0"
     implementation "com.squareup.moshi:moshi:$moshi_version"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
+
+    // Glide for Compose
+    implementation "com.github.skydoves:landscapist-glide:2.0.0"
 }
