--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "androidx.activity:activity-compose:1.6.0-rc01"
-    implementation "com.google.accompanist:accompanist-swiperefresh:0.24.2-alpha"
+    implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
 
     // Compose navigation
     implementation "androidx.navigation:navigation-compose:2.6.0-alpha01"
@@ -108,4 +108,7 @@ dependencies {
 
     // Glide for Compose
     implementation "com.github.skydoves:landscapist-glide:2.0.0"
+
+    // Accompanist FlowRow
+    implementation "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
 }
