--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     ext {
         compose_version = '1.3.0-beta01'
         hilt_version = '2.43.2'
-        accompanist_version = '0.24.2-alpha'
+        accompanist_version = '0.26.5-rc'
     }
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
