--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     // Compose dependencies
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    implementation "androidx.activity:activity-compose:1.6.0-rc01"
+    implementation "androidx.activity:activity-compose:1.7.0-beta01"
     implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
 
     // Compose navigation
