--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,8 +106,8 @@ dependencies {
     implementation "com.squareup.moshi:moshi:$moshi_version"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
 
-    // Glide for Compose
-    implementation "com.github.skydoves:landscapist-glide:2.0.0"
+    // Coil for Compose
+    implementation "io.coil-kt:coil-compose:2.2.2"
 
     // Accompanist FlowRow
     implementation "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
