--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,4 +114,7 @@ dependencies {
 
     // Accompanist Pager
     implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
+
+    // Accompanist system ui controller
+    implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
 }
